--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "npm run serve",
-    "serve": "vue-cli-service build --target lib --name=FormControl ./index.js --watch",
+    "serve": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
     "build": "vue-cli-service build --target lib --name=FormControl ./main.vue",
     "lint": "vue-cli-service lint",
     "fix": "vue-cli-service lint --fix",
@@ -39,9 +39,18 @@
   "dependencies": {
     "@vue-interface/merge-classes": "^1.0.2",
     "@vue-interface/utils": "^0.9.2",
+    "@vue-interface/variant": "^1.0.9",
+    "autoprefixer": "^9.8.0",
+    "color": "^3.1.2",
     "core-js": "^3.6.4",
     "lodash-es": "^4.17.15",
+    "postcss-calc": "^7.0.2",
+    "postcss-css-variables": "^0.17.0",
+    "postcss-encode-background-svgs": "^1.0.4",
+    "postcss-functions": "^3.0.0",
+    "postcss-hexrgba": "^2.0.0",
     "postcss-nested": "^4.2.1",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -53,6 +62,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "markdown-it-meta": "0.0.1",
+    "postcss-cli": "^7.1.1",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.0",
     "vuepress-plugin-template-constants": "^0.2.1"
