--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "core-js": "^3.6.4",
     "lodash-es": "^4.17.15",
     "postcss-calc": "^7.0.2",
-    "postcss-css-variables": "^0.17.0",
     "postcss-encode-background-svgs": "^1.0.4",
-    "postcss-functions": "^3.0.0",
     "postcss-hexrgba": "^2.0.0",
     "postcss-nested": "^4.2.1",
     "tailwindcss": "^1.4.6",
@@ -61,6 +59,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "hex-to-rgba": "^2.0.1",
     "markdown-it-meta": "0.0.1",
     "postcss-cli": "^7.1.1",
     "vue-template-compiler": "^2.6.11",
