--- a/package.json
+++ b/package.json
@@ -39,21 +39,21 @@
   "dependencies": {
     "@vue-interface/shadowable": "^0.9.1",
     "@vue-interface/tailwindcss": "^0.2.8",
-    "@vue-interface/utils": "^0.9.19",
+    "@vue-interface/utils": "^0.9.20",
     "@vue-interface/variant": "^1.0.12",
     "color": "^3.1.2",
     "core-js": "^3.6.4",
     "hex-to-rgba": "^2.0.1",
-    "tailwindcss": "^1.8.8",
+    "tailwindcss": "^1.8.10",
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "@vuepress/plugin-register-components": "^1.5.4",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.9.0",
     "eslint-plugin-vue": "^6.2.2",
     "markdown-it-meta": "0.0.1",
     "postcss-cli": "^7.1.2",
