--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vue-interface/tailwindcss": "^0.2.10",
     "@vue-interface/utils": "^0.9.23",
     "@vue-interface/variant": "^1.0.14",
+    "bootstrap": "^4.5.2",
     "color": "^3.1.2",
     "core-js": "^3.6.4",
     "hex-to-rgba": "^2.0.1",
@@ -60,5 +61,10 @@
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.6.0",
     "vuepress-plugin-template-constants": "^0.2.1"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
