--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@vue-interface/form-control",
   "version": "0.9.24",
   "description": "An abstract form control Vue mixin.",
-  "main": "index.js",
+  "main": "./dist/FormControl.umd.js",
   "scripts": {
     "watch": "npm run serve",
     "serve": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
@@ -39,25 +39,25 @@
   "dependencies": {
     "@vue-interface/shadowable": "^0.9.2",
     "@vue-interface/tailwindcss": "^0.2.10",
-    "@vue-interface/utils": "^0.9.23",
+    "@vue-interface/utils": "^0.9.25",
     "@vue-interface/variant": "^1.0.14",
     "bootstrap": "^4.5.2",
-    "color": "^3.1.2",
+    "color": "^3.1.3",
     "core-js": "^3.6.4",
     "hex-to-rgba": "^2.0.1",
     "tailwindcss": "^1.8.10",
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.6",
-    "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/cli-service": "^4.5.6",
+    "@vue/cli-plugin-babel": "^4.5.7",
+    "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
     "@vuepress/plugin-register-components": "^1.6.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.0.1",
     "markdown-it-meta": "0.0.1",
-    "postcss-cli": "^8.0.0",
+    "postcss-cli": "^8.1.0",
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.6.0",
     "vuepress-plugin-template-constants": "^0.2.1"
