--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@vue-interface/form-control",
   "version": "0.9.26",
   "description": "An abstract form control Vue mixin.",
-  "main": "./index.js",
+  "module": "./index.js",
+  "main": "./dist/FormControl.umd.js",
+  "unpkg": "./dist/FormControl.umd.min.js",
   "scripts": {
     "watch": "npm run serve",
     "serve": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
@@ -61,10 +63,5 @@
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.6.0",
     "vuepress-plugin-template-constants": "^0.2.1"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
