pre-release commit

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@vue-interface/form-control",
   "version": "0.9.27",
   "description": "An abstract form control Vue mixin.",
-  "module": "./index.js",
-  "main": "./dist/FormControl.umd.js",
+  "main": "./index.js",
   "unpkg": "./dist/FormControl.umd.min.js",
   "scripts": {
-    "watch": "npm run serve",
-    "serve": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
+    "serve": "vue-cli-service serve",
+    "watch": "npm run dev",
+    "dev": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
     "build": "vue-cli-service build --target lib --name=FormControl ./main.vue",
     "lint": "vue-cli-service lint",
     "fix": "vue-cli-service lint --fix",
@@ -52,14 +52,14 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^4.5.7",
     "@vue/cli-service": "^4.5.7",
     "@vuepress/plugin-register-components": "^1.6.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
     "eslint-plugin-vue": "^7.0.1",
     "markdown-it-meta": "0.0.1",
-    "postcss-cli": "^8.1.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.6.0",
     "vuepress-plugin-template-constants": "^0.2.1"
