--- a/package.json
+++ b/package.json
@@ -2,23 +2,22 @@
   "name": "@vue-interface/form-control",
   "version": "0.10.3",
   "description": "An abstract form control Vue mixin.",
-  "main": "./index.js",
-  "unpkg": "./dist/FormControl.umd.min.js",
+  "files": [
+    "dist",
+    "tailwindcss"
+  ],
+  "main": "./dist/form-control.umd.js",
+  "module": "./dist/form-control.es.js",
+  "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "watch": "npm run dev",
-    "dev": "vue-cli-service build --target lib --name=FormControl ./main.vue --watch",
-    "build": "vue-cli-service build --target lib --name=FormControl ./main.vue",
-    "lint": "vue-cli-service lint",
-    "fix": "vue-cli-service lint --fix",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "pre-release": "npm run build; git add . -A; git commit -m 'pre-release commit'",
     "release-patch": "npm run pre-release && npm version patch -m \"%s\" && npm run release;",
     "release-minor": "npm run pre-release && npm version minor -m \"%s\" && npm run release;",
     "release-major": "npm run pre-release && npm version major -m \"%s\" && npm run release;",
-    "release": "git add . -A; git commit; git push --tags origin; npm publish;",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "./node_modules/.bin/vuepress dev docs",
-    "docs:build": "./node_modules/.bin/vuepress build docs"
+    "release": "git add . -A; git commit; git push --tags origin; npm publish;"
   },
   "repository": {
     "type": "git",
@@ -39,29 +38,24 @@
   },
   "homepage": "https://github.com/vue-interface/form-control/docs#readme",
   "dependencies": {
-    "@vue-interface/shadowable": "^0.9.2",
-    "@vue-interface/tailwindcss": "^0.2.10",
-    "@vue-interface/utils": "^0.9.25",
-    "@vue-interface/variant": "^1.0.14",
-    "bootstrap": "^4.5.2",
-    "color": "^3.1.3",
-    "core-js": "^3.6.4",
-    "hex-to-rgba": "^2.0.1",
-    "tailwindcss": "^1.8.10",
-    "vue": "^2.6.12"
+    "@vue-interface/shadowable": "^1.0.0",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-service": "^4.5.7",
-    "@vuepress/plugin-register-components": "^1.6.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.9.0",
-    "eslint-plugin-vue": "^7.0.1",
-    "markdown-it-meta": "0.0.1",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "vue-template-compiler": "^2.6.12",
-    "vuepress": "^1.6.0",
-    "vuepress-plugin-template-constants": "^0.2.1"
+    "babel-preset-vue": "^2.0.2",
+    "change-case": "^4.1.2",
+    "color": "^4.2.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "pascalcase": "^2.0.0",
+    "postcss": "^8.4.6",
+    "postcss-functions": "^4.0.2",
+    "postcss-hexrgba": "^2.0.1",
+    "tailwindcss": "^3.0.18",
+    "vite": "^2.7.2",
+    "vite-plugin-vue2": "^1.9.3"
   }
 }
