--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   "dependencies": {
     "@vue-interface/shadowable": "^1.0.0",
     "color": "^4.2.0",
-    "param-case": "^3.0.4",
-    "vue": "^2.6.14"
+    "param-case": "^3.0.4"
+  },
+  "peerDependencies": {
+    "vue": "^3.0"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
@@ -59,6 +61,7 @@
     "postcss-hexrgba": "^2.0.1",
     "tailwindcss": "^3.0.18",
     "vite": "^2.7.2",
-    "vite-plugin-vue2": "^1.9.3"
+    "vite-plugin-vue2": "^1.9.3",
+    "vue": "^3.2.37"
   }
 }
