--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/vue-interface/form-control/docs#readme",
   "dependencies": {
+    "@vitejs/plugin-vue": "^3.0.1",
     "@vue-interface/shadowable": "^1.0.0",
     "color": "^4.2.0",
     "param-case": "^3.0.4"
@@ -60,8 +61,7 @@
     "postcss-functions": "^4.0.2",
     "postcss-hexrgba": "^2.0.1",
     "tailwindcss": "^3.0.18",
-    "vite": "^2.7.2",
-    "vite-plugin-vue2": "^1.9.3",
+    "vite": "^3.0",
     "vue": "^3.2.37"
   }
 }
