--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
   },
   "homepage": "https://github.com/vue-interface/form-control/docs#readme",
   "dependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@vue-interface/shadowable": "^2.0.0-beta.2",
     "color": "^4.2.0",
-    "param-case": "^3.0.4"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
