--- a/package.json
+++ b/package.json
@@ -33,14 +33,9 @@
   },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "vite build",
-    "preview": "vite preview",
-    "pre-release": "npm run build; git add . -A; git commit -m 'pre-release commit'",
-    "release-patch": "npm run pre-release && npm version patch -m \"%s\" && npm run release;",
-    "release-minor": "npm run pre-release && npm version minor -m \"%s\" && npm run release;",
-    "release-major": "npm run pre-release && npm version major -m \"%s\" && npm run release;",
-    "release": "git add . -A; git commit; git push --tags origin; npm publish;"
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -79,6 +74,7 @@
     "pascalcase": "^2.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
+    "typescript": "^4.0.0",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.7.1",
     "vue": "^3.2.37"
