--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite",
     "build": "vite build",
+    "watch": "vite build --watch -m development",
     "preview": "vite preview"
   },
   "repository": {
@@ -65,7 +66,7 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
@@ -75,8 +76,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.0.0",
-    "vite": "^3.0.0",
+    "vite": "^4.0.0",
     "vite-plugin-dts": "^1.7.1",
-    "vue": "^3.2.37"
+    "vue": "^3.0.0"
   }
 }
