temp disabled coverage repos

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,15 +14,10 @@ jobs:
       run: npm run build
     # - name: Run Jest 🃏
     #   run: npm test
-    # - name: Send Coverage Report 📡
-    #   uses: coverallsapp/github-action@master
+    # - name: Upload coverage reports to Codecov 📝
+    #   uses: codecov/codecov-action@v3
     #   with:
-    #     # This token is provided by Actions, you do not need to create your own token
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Upload coverage reports to Codecov 📝
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+    #     token: ${{ secrets.CODECOV_TOKEN }}
     - name: Create Release 🪧
       id: create_release
       uses: actions/create-release@v1
