--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-vue": "^9.7.0",
     "pascalcase": "^2.0.0",
     "postcss": "^8.4.6",
+    "semantic-release": "^20.1.0",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.0.0",
     "vite": "^4.0.0",
