optimize package.json

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "bugs": {
     "url": "https://github.com/vue-interface/form-control/issues"
   },
-  "homepage": "https://github.com/vue-interface/form-control/docs#readme",
+  "homepage": "https://github.com/vue-interface/form-control",
   "dependencies": {
     "@types/lodash-es": "^4.17.6",
     "@vue-interface/shadowable": "^2.0.0-beta.2",
