--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue-interface/eslint-config": "1.0.0-beta.0",
+    "@vue-interface/eslint-config": "^1.0.0-beta.0",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
     "eslint": "^8.27.0",
