--- a/package.json
+++ b/package.json
@@ -65,13 +65,20 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.7.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^10.0.5",
     "@vitejs/plugin-vue": "^4.2.0",
     "@vue-interface/eslint-config": "^1.0.0-beta.0",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
+    "commitlint": "^17.7.1",
     "eslint": "^8.27.0",
+    "husky": "^8.0.3",
     "pascalcase": "^2.0.0",
     "postcss": "^8.4.6",
+    "semantic-release": "^21.0.7",
     "tailwindcss": "^3.0.18",
     "typescript": "^5.1.0",
     "vite": "^4.2.0",
