--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "./tailwindcss/form-select": "./tailwindcss/form-select.cjs",
     "./tailwindcss/form-switch": "./tailwindcss/form-switch.cjs",
     "./tailwindcss/form-text": "./tailwindcss/form-text.cjs",
+    "./tailwindcss/input-group": "./tailwindcss/input-group.cjs",
     "./tailwindcss/safelist": "./tailwindcss/safelist.cjs",
     "./tailwindcss/sizes": "./tailwindcss/sizes.cjs",
     "./tailwindcss/validation": "./tailwindcss/validation.cjs"
@@ -56,9 +57,9 @@
   },
   "homepage": "https://github.com/vue-interface/form-control",
   "dependencies": {
-    "@types/lodash-es": "^4.17.6",
-    "@vue-interface/shadowable": "^2.0.0-beta.2",
-    "color": "^4.2.0",
+    "@types/lodash-es": "^4.17.8",
+    "@vue-interface/shadowable": "2.0.0-beta.9",
+    "color": "^4.2.3",
     "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
@@ -69,20 +70,20 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^10.0.5",
-    "@vitejs/plugin-vue": "^4.2.0",
-    "@vue-interface/eslint-config": "^1.0.0-beta.0",
-    "autoprefixer": "^10.4.2",
+    "@vitejs/plugin-vue": "^4.3.3",
+    "@vue-interface/eslint-config": "1.0.0-beta.4",
+    "autoprefixer": "^10.4.15",
     "change-case": "^4.1.2",
     "commitlint": "^17.7.1",
-    "eslint": "^8.27.0",
+    "eslint": "^8.47.0",
     "husky": "^8.0.3",
     "pascalcase": "^2.0.0",
-    "postcss": "^8.4.6",
-    "semantic-release": "^21.0.7",
-    "tailwindcss": "^3.0.18",
-    "typescript": "^5.1.0",
-    "vite": "^4.2.0",
-    "vite-plugin-dts": "^1.7.1",
+    "postcss": "^8.4.28",
+    "semantic-release": "^21.1.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vite-plugin-dts": "^1.7.3",
     "vue": "^3.3.4"
   }
 }
