--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "autoprefixer": "^10.4.15",
     "change-case": "^4.1.2",
     "commitlint": "^17.7.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.47.0",
     "husky": "^8.0.3",
     "pascalcase": "^2.0.0",
